# MA8502-dealii

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/advection_diffusion/: CMakeLists.txt  advection_diffusion.cc  advection_diffusion.cpp  advection_diffusion.h  advection_diffusion_dg.cc  advection_diffusion_dg.h  conv_plot.py  convergence_ad.cc  convergence_dg.cc  exact_solution.py  rhs_ad.cc  rhs_ad.h  run.cc  run_dg.cc  tut04-2.cc  tut04.cc  tut51.cc
src/advection_diffusion_vec/: CMakeLists.txt  advection_diffusion_vec.cc  advection_diffusion_vec.h  conv_plot.py  convergence_ad_vec.cc  expressions.py  rhs_ad_vec.cc  rhs_ad_vec.h  run_ad_vec.cc
src/artificial_diffusion/: CMakeLists.txt  artificial_diffusion.cc  artificial_diffusion.h  conv_plot.py  convergence_artd.cc  run_artd.cc
src/examples/: CMakeLists.txt
src/poisson/: CMakeLists.txt  conv_plot.py  convergence_p.cc  convergence_pdg.cc  error.cc  error.h  exact_solution.py  poisson.cc  poisson.h  poisson_dg.cc  poisson_dg.h  rhs.cc  rhs.h  run.cc  run_dg.cc
src/stokes/: CMakeLists.txt  conv_plot.py  convergence_st_vec.cc  expressions.py  rhs_st.cc  rhs_st.h  run_st.cc  stokes.cc  stokes.h
src/streamline_diffusion/: CMakeLists.txt  conv_plot.py  convergence.cc  run.cc  streamline_diffusion.cc  streamline_diffusion.h
src/utils/: integration.h
utils/: expressions.py  plot.py
